style.css
* {
  margin: 0;
  padding: 0;
}

html,
body {
  width: 100%;
  height: 100%;
  background: url("./images/bg-pattern.png"),
    -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
  font-family: "Muli", sans-serif;
}

h,
h2,
h3,
h5,
h6 {
  font-family: "Catamaran", sans-serif;
  letter-spacing: 0.5px;
}

h2 {
  font-size: 2.5rem;
}

/* initial style for images non responsive  */
/* .phone-image img {
  height: 49vh;
}
.phone-image > img.screen-content {
  height: 37vh;
  top: 6vh;
  left: 6.3vw;
  right: 6.3vw;
} */

/* new style for images responsive */
/* .phone-image {
  background-image: url("./images/iphone_6_plus_white_port.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
}

.screen-image {
  top: 2.2rem;
  bottom: 2.2rem;
  left: 5.25rem;
  right: 5.25rem;
  width: 45%;
  height: 100%;
}

.phone-image > img.screen-content.second {
  left: 3.4vw;
} */

/* style for single image of phone and screen */
.phone-image img {
  max-height: 74vh;
}

.jumbotron {
  text-align: center;
  background: none;
}

#navbar-newage {
  color: white;
  width: 100%;
  font-family: "Lato", sans-serif;
}
#navbar-container > a:hover {
  opacity: 0.7;
}
#navbar-container {
  width: 75%;
}
#navbarSupportedContent > ul > li {
  opacity: 0.6;
}
#navbarSupportedContent > ul > li:hover {
  opacity: 1;
}

.screen-content.second {
  top: 50%;
}
.row.get-started-row {
  background-image: url("./images/bg-cta.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 0;
  padding-top: 50%;
  position: relative;
}
.row.get-started-row:before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.5);
}
.get-started-details {
  position: absolute;
  top: 35%;
  left: 17%;
}
i.description-icon {
  color: rgb(136, 70, 81);
}
#navbar-newage .navbar-brand {
  color: yellow;
}
#navbar-newage .nav-item .nav-link {
  color: white;
  letter-spacing: 0.8px;
}

.btn-default {
  border-radius: 2rem !important;
}

.btn {
  font-size: 0.8rem;
  letter-spacing: 0.4px;
}

.btn:hover {
  color: black;
  background: white;
}
.btn:hover > p {
  color: black;
}

.connect-sprite-twitter {
  background: url("./images/connect.png") -0px -0px no-repeat;
  width: 45px;
  height: 45px;
  display: inline-block;
}

.connect-sprite-facebook {
  background: url("./images/connect.png") -45px -0px no-repeat;
  width: 45px;
  height: 45px;
  display: inline-block;
}

.connect-sprite-gplus {
  background: url("./images/connect.png") -90px -0px no-repeat;
  width: 45px;
  height: 45px;
  display: inline-block;
}

.connect.images > a:hover,
.discover-image > a:hover {
  opacity: 0.7;
}

@media all and (max-width: 991px) {
  /* .navbar-toggler-icon {
    font-size: 0.8rem;
  }
  .navicon {
    opacity: 0.7;
  }
  .jumbotron-description {
    padding-left: 0 !important;
  }
  div.description-content {
    padding-left: 20%;
  } */
  .get-started-details {
    top: 25%;
    left: 12%;
  }
  .get-started-details > h1 {
    font-size: 3rem;
  }

  #navbar-container {
    position: relative;
  }
  #navbarSupportedContent {
    position: absolute;
    top: 3rem;
    right: 0.7rem;
    z-index: 1;
    padding: 5px 10px;
    margin-top: 0.2rem;
    background: rgba(255, 255, 255, 0.9);
  }
  #navbarSupportedContent > ul > li > a {
    color: black !important;
  }
  #navbarSupportedContent > ul > li > a :hover {
    opacity: 0.8 !important;
  }
}

@media all and (max-width: 768px) {
  .phone-image > img.screen-content {
    left: 14.5rem;
  }

  #navbar-newage > div.container {
    width: 100vw;
    height: 4rem;
  }

  .phone-image > img.screen-content.second {
    /* left: 4.2rem;
     */
    left: 8vw;
  }
  .get-started-row {
    height: 40rem !important;
  }
  .get-started-details {
    top: 33%;
    left: 11.5%;
    /* letter-spacing: 2px; */
  }
  .get-started-details > h1 {
    font-size: 3.5rem;
  }
  /* .discover div div h1 {
    font-size: 2.5rem;
  } */
}

